Fix footer gap

--- a/css/custom.css
+++ b/css/custom.css
@@ -143,7 +143,7 @@ blockquote {
 
 .footer .wrapper p {
     line-height: 45px;
-    padding: 0;
+    margin: 0;
 }
 
 /* Menu Settings */
